Create update action, its tests and documentation for schedule types
