# swagger/v1/swagger.json
@@ -659,6 +659,49 @@
             "description": "Couldn't find Schedule Type with 'id'=./spec/integration/schedule_types_spec.rb[1:3:2:1]"
           }
         }
+      },
+      "patch": {
+        "summary": "Updates a schedule type",
+        "tags": [
+          "Schedule Types"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "schedule_type",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                }
+              },
+              "required": [
+                "name"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
       }
     },
     "/schedules": {
